style.css
body {
  background: linear-gradient(20deg, rgba(128,222,234,1) 0%, rgba(40,53,147,1) 100%) fixed;
}

/* No uppercase styling for buttons */
.no-uppercase {
  text-transform: none;
}

.rounded-corners {
  -webkit-border-radius: 20px;
  -moz-border-radius: 20px;
  border-radius: 20px;
}

/* Keep the height of the emotion cards on the front page the same */
.emotion-card {
  height: 200px;
}

@media (max-width: 690px) {
  .emotion-card {
    height: 250px;
  }
}

@media (max-width: 600px) {
  .emotion-card {
    height: 150px;
  }
}

